force-app/main/default/objects/CP_Billing_Checklist__c/CP_Billing_Checklist__c.object-meta.xml
<CustomObject>
    <label>CP Billing Checklist</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>CP Billing Checklist Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CP Billing Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>