force-app/main/default/objects/CP_Billing_Checklist__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>CP Billing Checklist</relationshipLabel>
    <relationshipName>CP_Billing_Checklist</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>