force-app/main/default/objects/CP_Billing_Checklist__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <label>Checklist Item</label>
    <type>TextArea</type>
</CustomField>