force-app/main/default/objects/CP_Billing_Checklist__c/fields/Final_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Date_Time__c</fullName>
    <label>Final Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>